# Bot-Detector-Core-Files

./: .dockerignore  .env-example  .gitignore  .pre-commit-config.yaml  Config.py  Dockerfile  Dockerfile-Dev  Dockerfile-Prod  ISSUES.md  LICENSE  OSRS BOT DETECTOR V1.3.py  OSRS BOT HISCORE NAME PULLER V1.2.py  README.md  SECURITY.md  SQL.py  Server  WEB-FINALVERSION.py  WEBPOST  Web-Reciever.py  __init__.py  app.py  auth.py  bd-api-deploy.yaml  bd-dev-api-deploy.yaml  bd-prod-api-deploy.yaml  deploy-dev-script.sh  deploy-prod-script.sh  docker-compose-env.yaml  docker-compose-env.yml  docker-compose.yaml  docker-compose.yml  errors.py  highscores.py  models.py  notes.md  pyproject.toml  requirements.dev.txt  requirements.txt  tables.txt  test.py
.github/: auto_assign.yml
Functions/: Config.py  SQL.py  highscores.py
HiscoreNamePuller/: HiscoreLookup.ipynb  HiscoreNamePuller.py
Main/: Main.ipynb  Main.py  RAWMain.py  V100_Main.py  maindetector.py  ykmfile
Predictions/: extra_data.py  gaussianNB.py  model.py  prediction_functions.py
Routes/: functions.py  player.py  reports.py
Routes_depr/: hiscores.py  predictions.py
SQL/: functions.py  reports.py
SQL-folder/: composite.py  discord_db.py  functions.py  labels.py  players.py
SQL_folder/: feedback.py  hiscores.py  tokens.py
Web Receiver/: FlaskServerJupyterNotebook.ipynb  Web Receiver  Web-Reciever.py  pnamefile  ykmfile
api/: Config.py  alembic.ini  app.py  middleware.py
database/: database.py  functions.py  models.py
deployment/: dev-deployment.yaml  dev-scaler.yaml  prod-deployment.yaml  (+1 more)
(+151 files in other folders)
